# OpenCV-Image-Node-Editor

./: CMakeLists.txt  NodeEditorSettings.json  imgui.ini
src/: ImImage.cpp  ImImage.h  datatypes.h  main.cpp  nodes.h
src/nodes/: all_nodes.h
src/nodes/debug/: test_node.h
src/nodes/image/: format_node.h  image_add_node.h  image_convert_node.h  image_map_node.h  image_node.h  image_orb_node.h  image_pyramid_down_node.h  image_pyramid_up_node.h  image_resize_node.h  image_subtract_node.h
src/nodes/math/: float_node.h  int_node.h  vec2i_compose_node.h  vec2i_decompose_node.h  vec2i_divide_node.h
